[gd_scene load_steps=10 format=3 uid="uid://d3ymch01expmt"]

[ext_resource type="Script" uid="uid://24v83hvf5tg2" path="res://scene-scripts/options_menu.gd" id="1_sy4hg"]
[ext_resource type="PackedScene" uid="uid://jgrspl5bog1o" path="res://prefabs/bg-nine-slice.tscn" id="2_eb7hu"]
[ext_resource type="PackedScene" uid="uid://buc3pa7ovo81q" path="res://prefabs/long-press-button.tscn" id="2_ljbxc"]
[ext_resource type="Texture2D" uid="uid://bng8j8q10k6yt" path="res://prefabs/recycle-icon.tres" id="3_br2jb"]
[ext_resource type="Texture2D" uid="uid://l6oe44m1j68v" path="res://UI/ui-sheet-1.png" id="4_eb7hu"]
[ext_resource type="Texture2D" uid="uid://d1exujn7egkcm" path="res://prefabs/credits-icon.tres" id="5_ghvkt"]
[ext_resource type="PackedScene" uid="uid://jqfcrgtcowf1" path="res://prefabs/left-hand-button.tscn" id="6_s2xg6"]
[ext_resource type="Theme" uid="uid://nowk0pjebs75" path="res://themes/left-hand-button.tres" id="9_ghvkt"]

[sub_resource type="AtlasTexture" id="AtlasTexture_wtvj4"]
atlas = ExtResource("4_eb7hu")
region = Rect2(866, 671, 35, 45)

[node name="options_menu_buttons" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_top = 24.0
offset_bottom = 24.0
script = ExtResource("1_sy4hg")

[node name="BG2" parent="." instance=ExtResource("2_eb7hu")]
custom_minimum_size = Vector2(496, 224)
layout_mode = 0
offset_left = 8.0
offset_top = -16.0
offset_right = 608.0
offset_bottom = 208.0

[node name="difficulty_24_hours_button" parent="." instance=ExtResource("6_s2xg6")]
layout_mode = 1
offset_left = 32.0
offset_top = 24.0
offset_right = 448.0
offset_bottom = 80.0
text = "TURN RESETS AFTER
ONE DAY IN REAL TIME"

[node name="difficulty_instant_button" parent="." instance=ExtResource("6_s2xg6")]
layout_mode = 1
offset_left = 32.0
offset_top = 120.0
offset_right = 448.0
offset_bottom = 176.0
text = "TURN RESETS
AT YOUR WILL"

[node name="BG3" parent="." instance=ExtResource("2_eb7hu")]
custom_minimum_size = Vector2(496, 224)
layout_mode = 0
offset_left = 8.0
offset_top = 888.0
offset_right = 712.0
offset_bottom = 1248.0

[node name="RESET_GAME" parent="." instance=ExtResource("2_ljbxc")]
layout_mode = 1
offset_left = 44.0
offset_top = 908.0
offset_right = 548.0
offset_bottom = 960.0
theme_override_colors/icon_normal_color = Color(1, 0, 0.364706, 1)
text = "RESET STATE"
icon = ExtResource("3_br2jb")

[node name="HARD_RESET" parent="." instance=ExtResource("2_ljbxc")]
layout_mode = 1
offset_left = 40.0
offset_top = 996.0
offset_right = 552.0
offset_bottom = 1048.0
theme_override_colors/icon_normal_color = Color(1, 0, 0.364706, 1)
text = "CLEAR MODS & RESET"
icon = ExtResource("3_br2jb")

[node name="TOGGLE_AUTOSAVE" parent="." instance=ExtResource("2_ljbxc")]
layout_mode = 1
offset_left = 44.0
offset_top = 1172.0
offset_right = 548.0
offset_bottom = 1224.0
theme_override_colors/icon_normal_color = Color(1, 1, 1, 1)
text = "AUTOSAVE OFF"
icon = SubResource("AtlasTexture_wtvj4")

[node name="UNLOCK_EVERYTHING" parent="." instance=ExtResource("2_ljbxc")]
layout_mode = 1
offset_left = 44.0
offset_top = 1084.0
offset_right = 548.0
offset_bottom = 1136.0
theme_override_colors/icon_normal_color = Color(0, 1, 0.666667, 1)
text = "UNLOCK EVERYTHING"
icon = ExtResource("5_ghvkt")
alignment = 0

[node name="BG4" parent="." instance=ExtResource("2_eb7hu")]
custom_minimum_size = Vector2(496, 224)
layout_mode = 0
offset_left = 8.0
offset_top = 464.0
offset_right = 600.0
offset_bottom = 872.0

[node name="TextEdit" type="TextEdit" parent="."]
custom_minimum_size = Vector2(550, 200)
layout_mode = 0
offset_left = 24.0
offset_top = 488.0
offset_right = 574.0
offset_bottom = 688.0
theme = ExtResource("9_ghvkt")
theme_override_constants/line_spacing = -5
theme_override_font_sizes/font_size = 16
placeholder_text = " 
	┏┓┳┳┏┓┏┓┏┳┓ 
 	┃┃┃┃┣  ┗┓  ┃  
 	┗┻┗┛┗┛┗┛  ┻  
 	┏┓┏┓┳┓┳┏┓┏┳┓
 	┗┓┃  ┣┫┃┃┃  ┃ 
 	┗┛┗┛┛┗┻┣┛  ┻ 


																													1.1.4"
caret_blink = true

[node name="EXECUTE_SCRIPT" parent="." instance=ExtResource("2_ljbxc")]
layout_mode = 1
offset_left = 72.0
offset_top = 712.0
offset_right = 576.0
offset_bottom = 764.0
theme_override_colors/icon_normal_color = Color(0, 1, 0.666667, 1)
text = "EXECUTE SCRIPT"
icon = ExtResource("5_ghvkt")
alignment = 0

[node name="OPEN_DOCUMENTAION" parent="." instance=ExtResource("2_ljbxc")]
layout_mode = 1
offset_left = 51.5
offset_top = 792.0
offset_right = 580.5
offset_bottom = 844.0
theme_override_colors/icon_normal_color = Color(0, 1, 0.666667, 1)
text = "OPEN DOCUMENTATION"
icon = ExtResource("5_ghvkt")
alignment = 0

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 24.0
offset_top = 472.0
offset_right = 256.0
offset_bottom = 486.0
theme = ExtResource("9_ghvkt")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 16
text = "Quest Script Console"

[node name="BG5" parent="." instance=ExtResource("2_eb7hu")]
custom_minimum_size = Vector2(496, 50)
layout_mode = 0
offset_left = 8.0
offset_top = 224.0
offset_right = 656.0
offset_bottom = 328.0

[node name="SFX_VALUE_TITLE" type="Label" parent="."]
layout_mode = 0
offset_left = 40.0
offset_top = 232.0
offset_right = 272.0
offset_bottom = 246.0
theme = ExtResource("9_ghvkt")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 16
text = "Sound FX Volume"

[node name="SFX_SLIDER" type="HSlider" parent="."]
custom_minimum_size = Vector2(500, 50)
layout_mode = 0
offset_left = 32.0
offset_top = 248.0
offset_right = 532.0
offset_bottom = 302.0
theme = ExtResource("9_ghvkt")
max_value = 1.0
step = 0.05
tick_count = 21
ticks_on_borders = true

[node name="BG6" parent="." instance=ExtResource("2_eb7hu")]
custom_minimum_size = Vector2(496, 50)
layout_mode = 0
offset_left = 8.0
offset_top = 344.0
offset_right = 656.0
offset_bottom = 448.0

[node name="MUSIC_VALUE_TITLE" type="Label" parent="."]
layout_mode = 0
offset_left = 40.0
offset_top = 352.0
offset_right = 272.0
offset_bottom = 366.0
theme = ExtResource("9_ghvkt")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 16
text = "Music Volume"

[node name="MUSIC_SLIDER" type="HSlider" parent="."]
custom_minimum_size = Vector2(500, 50)
layout_mode = 0
offset_left = 32.0
offset_top = 368.0
offset_right = 532.0
offset_bottom = 422.0
theme = ExtResource("9_ghvkt")
max_value = 1.0
step = 0.05
tick_count = 21
ticks_on_borders = true

[node name="TITLE" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 48.0
offset_top = -8.0
offset_right = 190.0
offset_bottom = 6.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("9_ghvkt")
theme_override_font_sizes/font_size = 16
text = "SELECT GAME MODE"
horizontal_alignment = 1

[node name="Label4" type="Label" parent="."]
layout_mode = 0
offset_left = 460.0
offset_top = 24.0
offset_right = 574.0
offset_bottom = 83.0
theme = ExtResource("9_ghvkt")
theme_override_colors/font_color = Color(1, 0, 0.364706, 1)
text = "24 HOUR
MODE"

[node name="SFX_VALUE" type="Label" parent="."]
layout_mode = 0
offset_left = 568.0
offset_top = 264.0
offset_right = 640.0
offset_bottom = 292.0
theme = ExtResource("9_ghvkt")
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "0%"

[node name="MUSIC_VALUE" type="Label" parent="."]
layout_mode = 0
offset_left = 568.0
offset_top = 384.0
offset_right = 640.0
offset_bottom = 412.0
theme = ExtResource("9_ghvkt")
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "0%"

[node name="Label5" type="Label" parent="."]
layout_mode = 0
offset_left = 568.0
offset_top = 992.0
offset_right = 682.0
offset_bottom = 1051.0
theme = ExtResource("9_ghvkt")
theme_override_colors/font_color = Color(1, 0, 0.364706, 1)
text = "CANNOT
UNDO"

[node name="Label6" type="Label" parent="."]
layout_mode = 0
offset_left = 568.0
offset_top = 1080.0
offset_right = 682.0
offset_bottom = 1139.0
theme = ExtResource("9_ghvkt")
theme_override_colors/font_color = Color(1, 0, 0.364706, 1)
text = "CANNOT
UNDO"

[node name="Label7" type="Label" parent="."]
layout_mode = 0
offset_left = 568.0
offset_top = 1184.0
offset_right = 682.0
offset_bottom = 1212.0
theme = ExtResource("9_ghvkt")
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "TOGGLE"

[node name="Label8" type="Label" parent="."]
layout_mode = 0
offset_left = 460.0
offset_top = 120.0
offset_right = 574.0
offset_bottom = 179.0
theme = ExtResource("9_ghvkt")
text = "INSTANT
MODE"
